syntax = "proto3";

package techweek.armeria;

import "google/api/annotations.proto";

service GreetingService {
  rpc Hello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/greeting/{name}"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
